Revised the site for demo presentation

--- a/public/styles/site/layout.less
+++ b/public/styles/site/layout.less
@@ -5,11 +5,12 @@
 */
 
 .navbar-style1{
-	position: absolute;
+	/*position: absolute;*/
   z-index: 8;
   width: 100%;
-	//background: rgba(0, 0, 0, 0);
-  background: rgba(20,20,20,0.3);
+	background: rgba(0, 0, 0, 0);
+  /*background: rgba(20,20,20,0.3);*/
+  /*background: rgba(48, 48, 48, 1);*/
   margin-bottom: 0px;
   border-radius: 0px;
 }
@@ -25,23 +26,23 @@
 }
 
 .not-active{
-	color: #EEF;	
+	color: black;	
 }
 
 .active{
-	color: white;	
+	color: black;	
 	font-weight: bold;
 }
 
 .nav>li>a.active:hover, .nav>li>a.active:focus { 
 	text-decoration: none;
-  color: white;
+  color: black;
   background-color: transparent;
 }
 
 .nav>li>a.not-active:hover, .nav>li>a.not-active:focus { 
 	text-decoration: none;
-  color: white;
+  color: black;
   background-color: transparent;
 }
 
@@ -88,7 +89,7 @@
 /* Since positioning the image, we need to help out the caption */
 .carousel-caption > h2 {
   margin-top: 10px;
-  color: white;
+  color: black;
 }
 
 /* Declare heights because of positioning of img element */
