--- a/templates/views/generic_page.jade
+++ b/templates/views/generic_page.jade
@@ -1,8 +1,192 @@
 extends ../layouts/default
 
 block content
-	.container
-		h1 Generic Page
-		p.lead Generic Page
-		//- viewing the content of pages
-		!= page.content
+	//- Dynamic Slider from the database
+	//- #myCarousel.carousel.slide(data-ride='carousel')
+	//- 	//- Carousel indicators were declared here
+	//- 	ol.carousel-indicators
+	//- 		each image in slider
+	//- 			//- if image.order is equal to 0 the first indicator will have a class 'active'
+	//- 			//- else it will not have a class 'active'
+	//- 			if image.order == "0"
+	//- 				li(data-target="#myCarousel" data-slide-to='#{image.order}' class="active")
+	//- 			else 
+	//- 				li(data-target="#myCarousel" data-slide-to='#{image.order}')
+
+	//- 	//- Carousel proper - the images will be loop in the slider queried from the controller
+	//- 	div(class="carousel-inner" role="listbox")
+	//- 		each image in slider
+	//- 			//- if image.order is equal to 0 the first indicator will have a class 'active'
+	//- 			//- else it will not have a class 'active'
+	//- 			if image.order == "0"
+	//- 				div(class="item active")
+	//- 					img(src='images/fiesta_banner.png')
+	//- 					div(class="container")
+	//- 						div(class="carousel-caption")
+	//- 							!= image.caption
+	//- 							if image.buttonText != ""
+	//- 								a(class="btn btn-lg btn-primary" href="#" role="button")= image.buttonText
+	//- 			else 
+	//- 				div(class="item")
+	//- 					//- img(class="first-slide" src="/images/slider/1.jpg" alt="First slide")
+	//- 					img(src=image._.heroImage.limit(1020,500))
+	//- 					div(class="container")
+	//- 						div(class="carousel-caption" style="text-align: right")
+	//- 							h2= image.caption
+	//- 							if image.buttonText != ""
+	//- 								a(class="btn btn-lg btn-primary" href="#" role="button")= image.buttonText
+
+	#myCarousel.carousel.slide(data-ride='carousel')
+		//- Carousel indicators were declared here
+		ol.carousel-indicators
+			li(data-target="#myCarousel" data-slide-to='0' class="active")
+
+		//- Carousel proper - the images will be loop in the slider queried from the controller
+		div(class="carousel-inner" role="listbox")
+			div(class="item active")
+				//- img(class="first-slide" src="/images/slider/1.jpg" alt="First slide")
+				img(src='/images/sipag_banner.png' width="1020" height="500")
+				//- div(class="container")
+				//- 	div(class="carousel-caption" style="text-align: right")
+						//- h2= image.caption
+						//- if image.buttonText != ""
+						//- 	a(class="btn btn-lg btn-primary" href="#" role="button")= image.buttonText
+			
+			//- left amd right arrows
+			//- a.left.carousel-control(href='#myCarousel', role='button', data-slide='prev')
+			//-   span.glyphicon.glyphicon-chevron-left
+			//- a.right.carousel-control(href='#myCarousel', role='button', data-slide='next')
+			//-   span.glyphicon.glyphicon-chevron-right
+
+
+	//- .container: .row
+	//- 	.col-md-9
+	//- 		center 
+	//- 			h2 FIESTA
+	//- 			h4 Showcase of the best outputs in agriculture and aquatic research and development
+	//- 		div.slick-slider
+	//- 			div
+	//- 				center 
+	//- 					a#pop(href="#")
+	//- 						img( src="/images/exhibit/sipagfiesta.png" id="imageresource" height="250px")
+	//- 			div
+	//- 				center 
+	//- 					img( src="/images/exhibit/knifefish.jpg" height="250px")
+	//- 			div
+	//- 				center 
+	//- 					img( src="/images/exhibit/mango.jpg" height="250px")
+	//- 			div
+	//- 				center 
+	//- 					img( src="/images/exhibit/bigeyelet.jpg" height="250px")
+	//- 			div
+	//- 				center 
+	//- 					img( src="/images/exhibit/cacao.jpg" height="250px")    
+	//- 	.col-md-3
+	//- 		center
+	//- 			h2 Upcoming Exhibits
+				
+	//- 			mixin item(title, content)
+	//- 				a.list-group-item(href="#")
+	//- 					h4.list-group-item-heading #{title}
+	//- 					p.list-group-item-text #{content}
+
+	//- 			div.list-group
+	//- 				+item("FIESTA Abaca", "Feb 25, 2017")
+	//- 				+item("Coconut FIESTA", "Mar 4, 2017")
+	//- 				+item("SARAI Exhibit", "Mar 11, 2017")
+	//- 				+item("SIPAG Fiesta", "Mar 30, 2017")
+
+	//- div(class="modal fade" id="imagemodal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true")
+	//- 	div.modal-dialog(role="document")
+	//- 		div.modal-content
+	//- 			div.modal-header
+	//- 				button(type="button" class="close" data-dismiss="modal" aria-label="Close")
+	//- 					span(aria-hidden="true") &times;
+	//- 				h5.modal-title SIPAG FIESTA
+					
+	//- 			div.modal-body
+	//- 				center
+	//- 					img( src="" id="imagepreview" height="200px")
+	//- 					p
+	//- 					h4 Commodity: ALL
+	//- 					h4 Date: March 2, 2016 - March 4, 2016
+	//- 					h4 Venue: PCAARRD Complex
+				
+	//- 			div.modal-footer
+	//- 				button(type="button" class="btn btn-success" data-dismiss="modal") View More
+	//- 				button(type="button" class="btn btn-default" data-dismiss="modal") Close
+
+	//- div(style='float:right; z-index:100; right:0px; top:400px; background-color:#FFF; width:40;height:40; padding:6px; position: fixed; border-radius:20px;')
+	//- 	a(href='#')
+	//- 		img( src="/images/community.png" height="40px")
+				
+	
+	.container(style="margin-top: 30px")
+		ul.nav.nav-tabs
+			li.active
+				a(data-toggle='tab', href='#about') About
+			li
+				a(data-toggle='tab', href='#program') Program
+			li
+				a(data-toggle='tab', href='#images') Images
+			li
+				a(data-toggle='tab', href='#videos') Videos
+			li
+				a(data-toggle='tab', href='#map') Map
+		.tab-content
+			#about.tab-pane.fade.in.active
+				br
+				p The DOST-PCAARRD Pushing the Best of the Strategic Industry S&T Program for Agri-Aqua Growth (SIPAG) through the Farms and Industry Encounters through the Science and Technology Agenda (FIESTA) will be held on March 2-4, 2016 at PCAARRD, Paseo de Valmayor, Timugan, Economic Garden, Los Baños, Laguna. The event will feature S&T breakthroughs, generated with PCAARRD partners and stakeholders, in a festive display of exhibits, actual technology demonstrations, and public fora.
+			#program.tab-pane.fade
+				center
+					img(src='images/sipag_program1.png' width="1000")
+					img(src='images/sipag_program2.png' width="1000")
+					img(src='images/sipag_program3.png' width="1000")
+			#images.tab-pane.fade
+				center
+					img(src='images/sipag1.png' width="250")
+					img(src='images/sipag2.png' width="250" height="170")
+					img(src='images/sipag3.png' width="250")
+					img(src='images/sipag4.png' width="250")
+					img(src='images/sipag5.png' width="250" height="170")
+					img(src='images/sipag6.png' width="250")
+			#videos.tab-pane.fade
+				.jumbotron
+					.container: .row
+						.col-sm-6
+							.h3 Pushing the Best of the Strategic Industry Science and Technology Program for Agri-Aqua Growth (SIPAG) through FIESTA
+								
+							
+							br
+
+							a(class="btn btn-lg btn-warning" href="#" role="button") Register Now
+
+						.col-sm-6
+							<iframe src="https://www.youtube.com/embed/YBx_Ypr2g_E" width="560" height="315" frameborder="0" allowfullscreen=""></iframe>
+			#map.tab-pane.fade
+				center
+					img(src='images/sipag_map.png' width="1000")
+
+
+
+	
+
+
+
+
+
+
+
+	//- div(style="margin-top: 60px; padding-left: 10vw; padding-right: 10vw;").jumbotron.text-center
+	//-   h2 We'll handle the back end, you handle the front
+	//-   p KeystoneJS isn't opinionated about how you design or build the front-end of your site. Use jQuery, Angular, React.js with LESS, SASS or css-modules and any node.js template language.
+	//-   div We've made this demo site with Bootstrap, Jade and LESS to show how simple it can be to get going, and included some themes from <a href="https://bootswatch.com/?ref=keystonejs" target="_blank">bootswatch</a>. Try them out by selecting below:
+	//-   if themes && themes.length
+	//-     hr(style="margin-bottom: 3em; margin-top: 3em;")
+	//-     ul.nav.nav-pills
+	//-       each theme in themes
+	//-         li(class=currentTheme === theme ? 'active' : '')
+	//-           a(href='/?theme=' + theme)= theme
+
+
+
