--- a/templates/layouts/default.jade
+++ b/templates/layouts/default.jade
@@ -48,7 +48,7 @@ html
 			//- ... or completely change this header to suit your design.
 
 			div(role="navigation").navbar.navbar-style1
-				.container(style="height:100px")
+				.container(style="height:85px")
 					.navbar-header
 						button.navbar-toggle(type='button', data-toggle='collapse', data-target='.navbar-collapse')
 							span.sr-only Toggle navigation
@@ -56,9 +56,9 @@ html
 							span.icon-bar
 							span.icon-bar
 						a.navbar-brand(href='/')
-							img(src= "/images/logo.png" height="90px") 
+							img(src= "/images/PCAARRD-logo.jpeg" height="85px" width="470px") 
 					.collapse.navbar-collapse
-						ul.nav.navbar-nav.navbar-right.links
+						ul.nav.navbar-nav.navbar-right.links(style="margin-top:18px")
 							each link in navLinks
 								li: a(href=link.href, class=section == link.key ? 'active' :"not-active")= link.label
 							if user
