--- a/templates/views/index.jade
+++ b/templates/views/index.jade
@@ -105,7 +105,7 @@ block content
 						p Venue: Tarlac College of Agriculture
 
 			.col-md-2.col-sm-6.col-xs-6.col-xxs-12.tech-item
-				a.fh5co-project-item(href='/sipag-fiesta', style='background-image: url(/images/fiesta/sipagfiesta.png);', target='_blank')
+				a.fh5co-project-item(href='/sipag-fiesta', style='background-image: url(/images/fiesta/sipagfiesta.png);')
 					img.img-responsive.sr-only(src='/images/fiesta/sipagfiesta.png')
 					.fh5co-overlay(style="background-color: rgb(18, 81, 4)")
 					.fh5co-text
@@ -184,20 +184,6 @@ block content
 				label.sr-only(for='search') Search
 				input#search.form-control(type='text', name='search', placeholder='Search')
 				span.glyphicon.glyphicon-search.form-control-feedback
-				
-	//- .jumbotron
-		.container: .row
-			.col-sm-6
-				.h3 Pushing the Best of the Strategic Industry Science and Technology Program for Agri-Aqua Growth (SIPAG) through FIESTA
-					
-				.p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla laboriosam cumque saepe aliquid aliquam doloremque quam, alias ipsam aperiam. Reprehenderit, dolorem!
-				
-				br
-
-				a(class="btn btn-lg btn-warning" href="#" role="button") Register Now
-
-			.col-sm-6
-				<iframe src="https://www.youtube.com/embed/YBx_Ypr2g_E" width="560" height="315" frameborder="0" allowfullscreen=""></iframe>
 
 
 	#tech_block.fh5co-project-style-3
