--- a/public/styles/site/layout.less
+++ b/public/styles/site/layout.less
@@ -1,67 +1,67 @@
 /*
 #header {
-	margin-top: 30px;
+  margin-top: 30px;
 }
 */
 
 .navbar-style1{
-	/*position: absolute;*/
+  /*position: absolute;*/
   z-index: 8;
   width: 100%;
-	background: rgba(0, 0, 0, 0);
+  background: rgba(0, 0, 0, 0);
   /*background: rgba(20,20,20,0.3);*/
   /*background: rgba(48, 48, 48, 1);*/
   margin-bottom: 0px;
   border-radius: 0px;
 }
 .navbar-brand{
-	padding: 0px;
-	margin-top: 0px;
+  padding: 0px;
+  margin-top: 0px;
   
 }
 
 .links{
-	font-size: 16px;
-	margin-top: 25px;
+  font-size: 16px;
+  margin-top: 25px;
 }
 
 .not-active{
-	color: black;	
+  color: black; 
 }
 
 .active{
-	color: black;	
-	font-weight: bold;
+  color: black; 
+  font-weight: bold;
 }
 
 .nav>li>a.active:hover, .nav>li>a.active:focus { 
-	text-decoration: none;
-  color: black;
+  text-decoration: none;
+  color: gray;
   background-color: transparent;
 }
 
 .nav>li>a.not-active:hover, .nav>li>a.not-active:focus { 
-	text-decoration: none;
-  color: black;
+  text-decoration: none;
+  color: gray;
   background-color: transparent;
 }
 
 .nav>li>a.btn-primary:hover, .nav>li>a.btn-primary:focus{
-	text-decoration: none;
-	color: #fff;
+  text-decoration: none;
+  color: #fff;
   background-color: #286090;
   border-color: #204d74;
 } 
 
 .jumbotron{
-	margin-bottom: 0px;
+  margin-bottom: 0px;
 }
 
 #footer {
-	margin-top: 30px;
-	border-top: 1px solid #eeeeee;
-	padding-top: 30px;
-	color: #777777;
+  margin-top: 30px;
+  border-top: 1px solid #eeeeee;
+  padding-top: 30px;
+  color: #777777;
 }
 
 .gallery-image img {
