Added a new slider for fiesta

--- a/public/styles/site/layout.less
+++ b/public/styles/site/layout.less
@@ -159,3 +159,107 @@
   font-size: 30px;
 }
 
+
+.exhibit-container{
+  display: table;
+  display: inline-block;
+  padding: 1%;
+  /*margin: 0.5% 2.4%;
+  width: 95%;*/
+  background-color: rgba(0, 0, 0, 0.95);
+  /* background-image: url("../img/exhibits/sliderbg.png"); */
+}
+
+.exhibit-content{
+  display: column;
+  padding-top:0;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
+#content-current{
+  width: 58%;
+  padding: 1%;
+  float:left;
+}
+
+#content-text{
+  padding: 0px;
+  width: 35%;
+  margin-left: 1%;
+  color: white;
+  float:left;
+  text-align: left;
+}
+
+.thumbnails{
+  overflow-y: auto;
+  float:right;
+  max-height:25%;
+  width: 100%;
+  margin-left:1%;
+  padding: 1%;
+}
+
+.thumbnail-content{
+  height:15%;
+  margin-left:1vh;
+  width: 23%;
+  opacity: 0.3;
+}
+
+.current-img{
+  opacity: 1;
+}
+
+#main-img{
+  margin-left:1%;
+  width:96%;
+  height:80%;
+}
+
+#event-title{
+  margin-bottom:0;
+  margin-top:0%;
+  color: #42A5F5;
+}
+
+#event-text{
+  padding: 2%;
+}
+
+.btn-see-more{
+  z-index: 1;
+  background-color: rgba(0, 0, 0, 0.9);
+  padding: 2%;
+  color: white;
+  display: inline-block;
+  width: 50%;
+  margin-top: 2%;
+  align-self: center;;
+  cursor: pointer;
+}
+
+.btn-see-more h5{
+  color:white;
+  margin: 10px 0px 10px 0px;
+}
+
+.btn-see-more h5:hover{
+  color: #42A5F5;
+}
+
+#btn-see-more-inner {
+  border: solid 1px #42A5F5;
+  height: 100%;
+  text-align: center;
+  padding-bottom: 5px;
+}
+
+#btn-see-more-inner:hover{
+  border: solid 1px #ffffff;
+}
+
+#exhibit-lists{
+	margin-top: 10px;
+}
