--- a/templates/layouts/default.jade
+++ b/templates/layouts/default.jade
@@ -15,6 +15,8 @@ html
 		//- Customise the stylesheet for your site by editing /public/styles/site.less
 		//- All .less files will be automatically compiled and minified in production.
 		link(href="/styles/site.min.css", rel="stylesheet")
+		link(rel='stylesheet', href='https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css', integrity='sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ', crossorigin='anonymous')
+
 		link(rel="stylesheet" type="text/css" href="/styles/cards.css")
 
 		link(rel="stylesheet" type="text/css" href="/styles/technology.css")
