--- a/templates/views/fiesta.jade
+++ b/templates/views/fiesta.jade
@@ -42,111 +42,8 @@ block content
 			//- a.right.carousel-control(href='#myCarousel', role='button', data-slide='next')
 			//-   span.glyphicon.glyphicon-chevron-right
 
-
-	.container: .row
-		.col-md-12
-			center 
-				h2 FIESTA
-				h4 Showcase of the best outputs in agriculture and aquatic research and development
-			center 
-				h2 On-going Fiesta
-			div.slick-slider
-				div
-					center 
-						a#pop(href="/sipag-fiesta")
-							img( src="/images/exhibit/sipagfiesta.png" id="imageresource" height="250px")
-				div
-					center 
-						img( src="/images/exhibit/knifefish.jpg" height="250px")
-				div
-					center 
-						img( src="/images/exhibit/mango.jpg" height="250px")
-				div
-					center 
-						img( src="/images/exhibit/bigeyelet.jpg" height="250px")
-				div
-					center 
-						img( src="/images/exhibit/cacao.jpg" height="250px")    
-		//- .col-md-3
-		//- 	center
-		//- 		h2 Upcoming Exhibits
-				
-		//- 		mixin item(title, content)
-		//- 			a.list-group-item(href="#")
-		//- 				h4.list-group-item-heading #{title}
-		//- 				p.list-group-item-text #{content}
-
-		//- 		div.list-group
-		//- 			+item("FIESTA Abaca", "Feb 25, 2017")
-		//- 			+item("Coconut FIESTA", "Mar 4, 2017")
-		//- 			+item("SARAI Exhibit", "Mar 11, 2017")
-		//- 			+item("SIPAG Fiesta", "Mar 30, 2017")
-	.container: .row
-		.col-md-12
-			center 
-				h2 Upcoming Fiesta
-			div.slick-slider
-				div
-					center 
-						a(href="/sipag-fiesta")
-							img( src="/images/exhibit/sipagfiesta.png" id="imageresource" height="250px")
-				div(style="margin-right:0px")
-					center 
-						img( src="/images/exhibit/knifefish.jpg" height="250px")
-				div
-					center 
-						img( src="/images/exhibit/mango.jpg" height="250px")
-				div
-					center 
-						img( src="/images/exhibit/bigeyelet.jpg" height="250px")
-				div
-					center 
-						img( src="/images/exhibit/cacao.jpg" height="250px")
-	.container: .row
-		.col-md-12
-			center 
-				h2 Past Fiesta
-			div.slick-slider
-				div
-					center 
-						a#pop(href="/sipag-fiesta")
-							img( src="/images/exhibit/sipagfiesta.png" id="imageresource" height="250px")
-				div
-					center 
-						img( src="/images/exhibit/knifefish.jpg" height="250px")
-				div
-					center 
-						img( src="/images/exhibit/mango.jpg" height="250px")
-				div
-					center 
-						img( src="/images/exhibit/bigeyelet.jpg" height="250px")
-				div
-					center 
-						img( src="/images/exhibit/cacao.jpg" height="250px") 
-
-
-	div(class="modal fade" id="imagemodal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true")
-		div.modal-dialog(role="document")
-			div.modal-content
-				div.modal-header
-					button(type="button" class="close" data-dismiss="modal" aria-label="Close")
-						span(aria-hidden="true") &times;
-					h5.modal-title SIPAG FIESTA
-					
-				div.modal-body
-					center
-						img( src="" id="imagepreview" height="200px")
-						p
-						h4 Commodity: ALL
-						h4 Date: March 2, 2016 - March 4, 2016
-						h4 Venue: PCAARRD Complex
-				
-				div.modal-footer
-					button(type="button" class="btn btn-success" data-dismiss="modal") View More
-					button(type="button" class="btn btn-default" data-dismiss="modal") Close
-
 	div(style='float:right; z-index:100; right:0px; top:100px; background-color:#EEE; width:40;height:40; padding:6px; position: fixed; border-radius:20px;')
-		a(href='#')
+		a(href='#', title="Community")
 			img( src="/images/community.png" height="30px")
 
 	div(style='float:right; z-index:100; right:0px; top:150px;  position: fixed; ')
@@ -155,3 +52,95 @@ block content
 				label.sr-only(for='search') Search
 				input#search.form-control(type='text', name='search', placeholder='Search')
 				span.glyphicon.glyphicon-search.form-control-feedback
+
+
+	div#exhibit-slider
+		.exhibit-container
+			p.subparts-title(style='background-color: rgba(0, 0, 0, 0.5); z-index: 5; color: white; font-size: 2em; margin-bottom: 10px;')
+				b F
+				| arm and 
+				b I
+				| ndustry 
+				b E
+				| ncounters through 
+				b S
+				| cience and 
+				b T
+				| echnology 
+				b A
+				| genda
+			#content-current.exhibit-content
+				img#main-img(src='/images/exhibit/exhibit_1.png')
+				.thumbnails
+					img#exhibit_1.thumbnail-content.current-img(src='/images/exhibit/exhibit_1.png')
+					img#exhibit_2.thumbnail-content(src='/images/exhibit/exhibit_2.png')
+					img#exhibit_3.thumbnail-content(src='/images/exhibit/exhibit_3.png')
+					img#exhibit_4.thumbnail-content(src='/images/exhibit/exhibit_4.png')
+			#content-text.exhibit-content
+				p#event-title
+					b SIPAG FIESTA: Best of 2010-2016
+				p#event-text
+					em Pushing the Best of SIPAG through FIESTA
+					|  showcased the outputs from the various Strategic Industry S&T Programs for Agri-Aqua Growth(SIPAG) conducted by R&D partners in 13 regions of the country.
+					|                        Among the outputs were on food delicacies, processed food products, wines, grains, fruits, vegetables, furniture and even clothes— goods that complement a true fiesta celebration.
+					hr
+				.btn-see-more
+					#btn-see-more-inner
+						a
+							h5
+								b
+									| SEE MORE
+
+	div.container#exhibit-lists
+		h2 DOST PCAARRD FIESTA
+		.card-deck
+			.card
+				img.card-img-top(src='/images/exhibit/exhibit_1.png' height="150px")
+				.card-block
+					h4.card-title Card title
+					p.card-text
+						| Sample
+					p.card-text
+						a.btn.btn-primary(href='#') Go somewhere
+			.card
+				img.card-img-top(src='/images/exhibit/exhibit_2.png', height="150px")
+				.card-block
+					h4.card-title Card title
+					p.card-text
+						| This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.
+					p.card-text
+						a.btn.btn-primary(href='#') Go somewhere
+			.card
+				img.card-img-top(src='/images/exhibit/exhibit_3.png', height="150px")
+				.card-block
+					h4.card-title Card title
+					p.card-text
+						| This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.
+					p.card-text
+						a.btn.btn-primary(href='#') Go somewhere
+		br
+		.card-deck
+			.card
+				img.card-img-top(src='/images/exhibit/exhibit_4.png' height="150px")
+				.card-block
+					h4.card-title Card title
+					p.card-text
+						| Sample
+					p.card-text
+						a.btn.btn-primary(href='#') Go somewhere
+			.card
+				img.card-img-top(src='/images/exhibit/exhibit_5.png', height="150px")
+				.card-block
+					h4.card-title Card title
+					p.card-text
+						| This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.
+					p.card-text
+						a.btn.btn-primary(href='#') Go somewhere
+			.card
+				img.card-img-top(src='/images/exhibit/exhibit_6.png', height="150px")
+				.card-block
+					h4.card-title Card title
+					p.card-text
+						| This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.
+					p.card-text
+						a.btn.btn-primary(href='#') Go somewhere
