Updated homepage and fiesta page.

--- a/public/styles/site/layout.less
+++ b/public/styles/site/layout.less
@@ -58,7 +58,8 @@
 }
 
 #footer {
-  margin-top: 30px;
+	position: absolute;
+  margin-top: 600px;
   border-top: 1px solid #eeeeee;
   padding-top: 30px;
   color: #777777;
@@ -263,3 +264,50 @@
 #exhibit-lists{
 	margin-top: 10px;
 }
+
+.card {
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+    width: 100%;
+    .container {
+		    padding: 2px 16px;
+		}
+}
+
+.card:hover {
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+}
+
+.top-space{
+	margin-top: 20px;
+}
+
+#community_block{
+	margin-top: -20px;
+	position: absolute;
+
+	.community-caption{
+	  background-color: rgba(0, 0, 0, 0.1);
+	  text-align: left;
+	}
+	.community-caption > h2{
+	  position: absolute;
+	  color: white;
+	  left: 100px;
+	  top: 150px;
+	  //background-color: rgba(0, 0, 0, 0.1);
+	  //text-align: left;
+	}
+	.community-caption > h4{
+	  position: absolute;
+	  color: white;
+	  left: 100px;
+	  top: 200px;
+	  //background-color: rgba(0, 0, 0, 0.1);
+	  //text-align: left;
+	}
+
+}
+
+
+
