--- a/templates/views/fiesta.jade
+++ b/templates/views/fiesta.jade
@@ -93,54 +93,59 @@ block content
 
 	div.container#exhibit-lists
 		h2 DOST PCAARRD FIESTA
-		.card-deck
-			.card
-				img.card-img-top(src='/images/exhibit/exhibit_1.png' height="150px")
-				.card-block
-					h4.card-title Card title
-					p.card-text
-						| Sample
-					p.card-text
-						a.btn.btn-primary(href='#') Go somewhere
-			.card
-				img.card-img-top(src='/images/exhibit/exhibit_2.png', height="150px")
-				.card-block
-					h4.card-title Card title
-					p.card-text
-						| This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.
-					p.card-text
-						a.btn.btn-primary(href='#') Go somewhere
-			.card
-				img.card-img-top(src='/images/exhibit/exhibit_3.png', height="150px")
-				.card-block
-					h4.card-title Card title
-					p.card-text
-						| This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.
-					p.card-text
-						a.btn.btn-primary(href='#') Go somewhere
-		br
-		.card-deck
-			.card
-				img.card-img-top(src='/images/exhibit/exhibit_4.png' height="150px")
-				.card-block
-					h4.card-title Card title
-					p.card-text
-						| Sample
-					p.card-text
-						a.btn.btn-primary(href='#') Go somewhere
-			.card
-				img.card-img-top(src='/images/exhibit/exhibit_5.png', height="150px")
-				.card-block
-					h4.card-title Card title
-					p.card-text
-						| This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.
-					p.card-text
-						a.btn.btn-primary(href='#') Go somewhere
-			.card
-				img.card-img-top(src='/images/exhibit/exhibit_6.png', height="150px")
-				.card-block
-					h4.card-title Card title
-					p.card-text
-						| This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.
-					p.card-text
-						a.btn.btn-primary(href='#') Go somewhere
+		.row
+			.col-md-4.top-space
+				.card
+					img.card-img-top(src='/images/exhibit/exhibit_1.png' height="180px")
+					.card-block
+						h4.card-title Card title
+						p.card-text
+							| Sample
+						p.card-text
+							a.btn.btn-primary(href='#') Go somewhere
+			.col-md-4.top-space
+				.card
+					img.card-img-top(src='/images/exhibit/exhibit_2.png' height="180px")
+					.card-block
+						h4.card-title Card title
+						p.card-text
+							| Sample
+						p.card-text
+							a.btn.btn-primary(href='#') Go somewhere
+			.col-md-4.top-space
+				.card
+					img.card-img-top(src='/images/exhibit/exhibit_3.png' height="180px")
+					.card-block
+						h4.card-title Card title
+						p.card-text
+							| Sample
+						p.card-text
+							a.btn.btn-primary(href='#') Go somewhere
+
+			.col-md-4.top-space
+				.card
+					img.card-img-top(src='/images/exhibit/exhibit_4.png' height="180px")
+					.card-block
+						h4.card-title Card title
+						p.card-text
+							| Sample
+						p.card-text
+							a.btn.btn-primary(href='#') Go somewhere
+			.col-md-4.top-space
+				.card
+					img.card-img-top(src='/images/exhibit/exhibit_5.png' height="180px")
+					.card-block
+						h4.card-title Card title
+						p.card-text
+							| Sample
+						p.card-text
+							a.btn.btn-primary(href='#') Go somewhere
+			.col-md-4.top-space
+				.card
+					img.card-img-top(src='/images/exhibit/exhibit_6.png' height="180px")
+					.card-block
+						h4.card-title Card title
+						p.card-text
+							| Sample
+						p.card-text
+							a.btn.btn-primary(href='#') Go somewhere
