--- a/templates/views/index.jade
+++ b/templates/views/index.jade
@@ -84,14 +84,15 @@ block content
 		.row
 			.col-md-12
 				center
-					img.img-responsive(src='/images/fiesta-3.png', alt='Image' width="1200px;" height="200px;")
+					img.img-responsive(src='/images/fiesta_cover.png', alt='Image' width="1300px;" height="200px;")
 		.container
 			.row.p-b(style="margin-bottom:30px")
 				//- .col-md-12
 					center
 						//- h2.fh5co-heading-fiesta FIESTA
 				.col-md-12
-					p.fiesta(style="color:black") FIESTA(Farm and Industry Encounters through Science and Technology  Agenda) is anintegrated event on S&T and product promotion, technology matching, and product launch. 
+					center
+						p.fiesta(style="color:black") Celebrate our Filipino culture while promoting Science and Technology through the festivals hosted by different provinces in the country. 
 
 		.row.p-b
 			.col-md-2.col-sm-6.col-xs-6.col-xxs-12.tech-item
@@ -192,7 +193,7 @@ block content
 				.col-md-12
 					h2.fh5co-heading Technologies
 				.col-md-8
-					p We develop new technologies and innovations that increase farm yield and crop productivity, produce pest resistant and drought tolerant seeds, and develop healthier swine and goat stocks resilient in diseases, among other breakthroughs.
+					p Improve your production by exploring the different technologies you can use to manage your crops and livestock.
 		.row.p-b
 			.col-md-2.col-sm-6.col-xs-6.col-xxs-12.tech-item
 				a.fh5co-project-item(href='http://www.pcaarrd.dost.gov.ph/home/portal/index.php/quick-information-dispatch/2583-new-fusarium-wilt-resistant-cavendish-passed-export-market-standards', style='background-image: url(/images/exhibit/cavendish.jpg);', target='_blank')
@@ -311,6 +312,14 @@ block content
 		//- 			a.btn.btn-primary.btn-lg(href='#', style='line-height:30px')
 		//- 				span(style='vertical-align:middle;') See more of our technologies
 		//- 				i.icon.icon-chevron-right(style='font-size:20px;vertical-align:middle;')		
-
-
+	
+	#community_block
+		.row
+			.col-md-12.absolute
+				center
+					img.img-responsive(src='/images/community.jpg', width="1300px;" height="200px;")
+			div(class="container")
+				div(class="community-caption")
+					h2 Community
+					h4 Join the conversation to know more about the country’s <br /> agriculture and aquaculture natural resources. 
 
