Updated the logo

--- a/templates/layouts/default.jade
+++ b/templates/layouts/default.jade
@@ -58,7 +58,7 @@ html
 							span.icon-bar
 							span.icon-bar
 						a.navbar-brand(href='/')
-							img(src= "/images/PCAARRD-logo.jpeg" height="85px" width="470px") 
+							img(src= "/images/dost-pcaarrd-white-logo.png" height="85px" width="470px") 
 					.collapse.navbar-collapse
 						ul.nav.navbar-nav.navbar-right.links(style="margin-top:18px")
 							each link in navLinks
