--- a/templates/views/index.jade
+++ b/templates/views/index.jade
@@ -92,7 +92,8 @@ block content
 						//- h2.fh5co-heading-fiesta FIESTA
 				.col-md-12
 					center
-						p.fiesta(style="color:black") Celebrate our Filipino culture while promoting Science and Technology through the festivals hosted by different provinces in the country. 
+						strong
+							p.fiesta(style="color:black") Celebrate our Filipino culture while promoting Science and Technology through the festivals hosted by different provinces in the country. 
 
 		.row.p-b
 			.col-md-2.col-sm-6.col-xs-6.col-xxs-12.tech-item
@@ -177,7 +178,7 @@ block content
 
 	div(style='float:right; z-index:100; right:0px; top:100px; background-color:#EEE; width:40;height:40; padding:6px; position: fixed; border-radius:20px;')
 		a(href='#')
-			img( src="/images/community.png" height="30px")
+			img( src="/images/community.png" title="Community" height="30px")
 
 	div(style='float:right; z-index:100; right:0px; top:150px;  position: fixed; ')
 		form.search-form(action='')
@@ -321,5 +322,5 @@ block content
 			div(class="container")
 				div(class="community-caption")
 					h2 Community
-					h4 Join the conversation to know more about the country’s <br /> agriculture and aquaculture natural resources. 
+					h4 Join the conversation. Know more about the country’s <br /> agriculture and aquaculture natural resources. 
 
