--- a/public/styles/site/layout.less
+++ b/public/styles/site/layout.less
@@ -82,8 +82,12 @@
 /* Since positioning the image, we need to help out the caption */
 .carousel-caption {
   z-index: 10;
-  padding-bottom: 50px;
-  //background-color: rgba(0, 0, 0, 0.1);
+  //padding-bottom: 50px;
+  top: 20px;
+  left: 30px;
+  width: 95%;
+  padding: 5px;
+  background-color: rgba(0, 0, 0, 0.1);
   //text-align: left;
 }
 
